# TemplateSearch

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
.github/workflows/: build_and_test.yml
src/: SearchAlgos.cpp  SearchAlgos.hpp  TemplateSearch.h.in  main.cpp
tests/: CMakeLists.txt  TestSearchAlgos.cpp  main.cpp
